--- a/public/views/view_company.html
+++ b/public/views/view_company.html
@@ -2,9 +2,9 @@
     <div class="row">
         <div class="col-md-4">
             <div class="input-group">
-                <input type="text" class="form-control" placeholder="Search for...">
+                <input ng-model="search" type="text" class="form-control" placeholder="Search for...">
                 <span class="input-group-btn">
-                    <button class="btn btn-default" type="button">Go!</button>
+                    <button class="btn btn-default" type="button" ng-click="initSearch()"><span class="glyphicon glyphicon-search search-icon"></span></button>
                 </span>
             </div>
 
