--- a/public/views/view_company.html
+++ b/public/views/view_company.html
@@ -1,10 +1,106 @@
 <div class="vc_container container-fluid" ng-controller="viewController">
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-sm-2 col-xs-2">
+            <div class="panel panel-default">
+                <div class="panel-heading vc-advsearch-pnl-heading">
+                    <h3 class="panel-title">Advanced Search</h3>
+                </div>
+                <div class="panel-body vc-advsearch-pnl-body">
+                    <div class="form-group">
+                        <label class="control-label" for="input_company">Company:</label>
+                        <input type="text" class="form-control form-control-sm"  ng-model="input_company" placeholder="">
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label " for="input_domain">Domain:</label>
+
+                        <input type="text" class="form-control form-control-sm" ng-model="input_domain" placeholder="">
+
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label " for="input_address">Address:</label>
+
+                        <input type="text" class="form-control form-control-sm" ng-model="input_address" placeholder="">
+
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label " for="input_city">City:</label>
+
+                        <input type="text" class="form-control form-control-sm" ng-model="input_city" placeholder="">
+
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label " for="input_state">State:</label>
+
+                        <input type="text" class="form-control form-control-sm" ng-model="input_state" placeholder="">
+
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label " for="input_zipcode">Zipcode:</label>
+
+                        <input type="text" class="form-control form-control-sm" ng-model="input_zipcode" placeholder="">
+
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label " for="input_country">Country:</label>
+
+                        <input type="text" class="form-control form-control-sm" ng-model="input_country" placeholder="">
+
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label " for="input_industry">Industry:</label>
+
+                        <input type="text" class="form-control form-control-sm" ng-model="input_industry" placeholder="">
+
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label " for="input_sic_code">SIC Code:</label>
+
+                        <input type="text" class="form-control form-control-sm" ng-model="input_sic_code" placeholder="">
+
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label " for="input_revenue">Revenue:</label>
+
+                        <select class="form-control form-control-sm" ng-model="input_revenue">
+                                    <option value="">None</option>                                        
+                                    <option value="500 to 1000">500 to 1000</option>
+                                    <option value="Above 1000">Above 1000</option>
+                                </select>
+
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label " for="input_employees">Employees:</label>
+
+                        <select class="form-control form-control-sm" ng-model="input_employees">
+                                    <option value="">None</option>                                        
+                                    <option value="500 to 1000">500 to 1000</option>
+                                    <option value="Above 1000">Above 1000</option>
+                                </select>
+
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label " for="input_software">Software:</label>
+
+                        <input type="text" class="form-control form-control-sm" ng-model="input_software" placeholder="">
+
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label " for="input_parent">Parent:</label>
+
+                        <input type="text" class="form-control form-control-sm" ng-model="input_parent" placeholder="">
+
+                    </div>
+                    <div class="form-group adv_submit">
+                        <button id="adv_submit" type="submit" class="btn btn-default btn-xs" ng-click="advancedSearch()">Submit</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-4 col-sx-4">
             <div class="input-group">
                 <input ng-model="search" type="text" class="form-control" placeholder="Search for...">
                 <span class="input-group-btn">
-                    <button class="btn btn-default" type="button" ng-click="initSearch()"><span class="glyphicon glyphicon-search search-icon"></span></button>
+                    <button title="Search" class="btn btn-default" type="button" ng-click="initSearch()"><span class="glyphicon glyphicon-search search-icon"></span></button>
                 </span>
             </div>
 
@@ -14,24 +110,45 @@
                 </div>
                 <div class="panel-body vc_company_list" scrolly="showMore()">
                     <div class="list-group">
-                        <a class="list-group-item" ng-repeat="company in companies" href="#/getcompany/{{company.domain}}">
-                        <h4 class="list-group-item-heading"> {{company.company}} </h4>
-                        <p class="list-group-item-text">{{company.city}}, {{company.state}}, {{company.country}}</p>
+                        <a class="list-group-item" ng-repeat="company in companies" ng-click="getInfo(company)" ng-class="{ active : selectedCompany === company.domain}">
+                            <h4 class="list-group-item-heading"> {{company.company}} </h4>
+                            <p class="list-group-item-text">{{company.city}}, {{company.state}}, {{company.country}}</p>
                         </a>
                     </div>
                 </div>
-                <p class="list-status" > Showing {{cursor_skip}} of {{cursor_total}} </p>
-            </div>            
+                <p class="list-status"> Showing {{cursor_skip}} of {{cursor_total}} </p>
+            </div>
         </div>
-        <div class="col-md-8">
-            <div class="panel panel-default">
+        <div class="col-sm-6 col-xs-6">
+            <div class="panel panel-primary">
                 <div class="panel-heading">
                     <h3 class="panel-title">Company Info</h3>
                 </div>
                 <div class="panel-body">
-                    
+                    <dl class="dl-horizontal company-info" ng-if="showInfo">
+                        <dt ng-repeat-start="field in fields">{{field.name}}</dt>
+                        <dd ng-repeat-end>{{companyInfo[field.key]}}</dd>
+                    </dl>
                 </div>
             </div>
         </div>
-    </div>    
+    </div>
+    <div id="advancedSearchModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Advanced Search</h4>
+                </div>
+                <div class="modal-body">
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default btn-xs" data-dismiss="modal">Submit</button>
+                    <button type="button" class="btn btn-default btn-xs" data-dismiss="modal">Clear</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
