--- a/public/views/view_company.html
+++ b/public/views/view_company.html
@@ -1,4 +1,4 @@
-<div class="vc_container container-fluid" ng-controller="viewController">
+<div class="vc_container container-fluid" ng-controller="viewCompanyController">
     <div class="row">
         <div class="col-sm-2 col-xs-2">
             <div class="panel panel-default">
