--- a/public/views/uploads.html
+++ b/public/views/uploads.html
@@ -1,36 +1,66 @@
-
-    <div ng-controller="uploadController">
-        <div class="panel panel-primary">
-            <div class="panel-heading">
+<div ng-controller="uploadCompanyController">
+    
+        <div class="sidebar">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Files</h3>
+                </div>
+                
+                <div class="panel-body file_list-body" scrolly="showMore()">
+                    <ul class="list-group saved-files">
+                        <li class="list-group-item" ng-repeat="file in savedfiles">
+                            <div class="input-group">
+                                <img class="file-icon"></img>
+                                <span class="span-file-name" title="{{file.name}}" >
+                                    <p>{{file.name}}</p>
+                                    <p class="file-created"> {{file.created}} </p>
+                                </span>
+                                
+                                <span class="input-group-btn file-action-btn">
+                                    <button class="btn btn-default" type="button" ng-click="deleteFile(file.originalfile)"><span class="glyphicon glyphicon-trash"></span></button>
+                                    <button class="btn btn-default" type="button" ng-click="downloadFile(file.originalfile)"><span class="glyphicon glyphicon-cloud-download"></span></button>
+                                </span>
+                            </div>                                
+                        </li>
+                    </ul>
+                </div>
+                
+            </div>
+        </div>
+        <div class="upload-body">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
                     <h3 class="panel-title">Add Company </h3>
-            </div>
-            <div class="panel-body">
-                <div class="alert alert-warning">
-                    <h4><strong>Note :</strong> The uploaded xlsx file should have column header with following name to save data into database. </h4>
-                    <h4>
-                        <ul class="list-inline">
-                            <li class="list-inline-item" ng-repeat="field in fields"><span class="field-label" ng-click="getFieldInfo(field.key)"><strong ng-class="{ fieldactive: selectedField === field.key }">{{ field.key }}</strong></span> | </li>
-                        </ul>
-                    </h4>
-                    <p class="more-field-info">{{fieldInfo}}</p>
                 </div>
-                <button ngf-select="uploadFiles($files)" multiple ngf-pattern="'.xls,.csv,.xlsx'">Select File</button>
-                <br>
-                <br>Files:
-                <ul>
-                    <li ng-repeat="f in files" style="font:smaller">
-                        {{f.name}}
-                    </li>
-                </ul>
-                <!-- <span class="progress" ng-show="progress >= 0">
-                    <div style="width:{{progress}}%" ng-bind="progress + '%'"></div>
-                </span> -->
-                <div class="progress" ng-show="progress >= 0">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: {{progress}}%;">
-                        {{progress}}%
+                <div class="panel-body file-upload-panel-body">
+                    <div class="alert alert-warning">
+                        <h4><strong>Note :</strong> The uploaded xlsx file should have column header with following name to save data
+                            into database. </h4>
+                        <h4>
+                            <ul class="list-inline">
+                                <li class="list-inline-item" ng-repeat="field in fields"><span class="field-label" ng-click="getFieldInfo(field.key)"><strong ng-class="{ fieldactive: selectedField === field.key }">{{ field.key }}</strong></span>                            | </li>
+                            </ul>
+                        </h4>
+                        <p class="more-field-info">{{fieldInfo}}</p>
                     </div>
+                    <button ngf-select="uploadFiles($files)" multiple ngf-pattern="'.xls,.csv,.xlsx'">Select File</button>
+                    <br>
+                    <br>Files:
+                    <ul>
+                        <li ng-repeat="f in files" style="font:smaller">
+                            {{f.name}}
+                        </li>
+                    </ul>
+                    <!-- <span class="progress" ng-show="progress >= 0">
+                        <div style="width:{{progress}}%" ng-bind="progress + '%'"></div>
+                    </span> -->
+                    <div class="progress" ng-show="progress >= 0">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: {{progress}}%;">
+                            {{progress}}%
+                        </div>
+                    </div>
+                    {{errorMsg}}
                 </div>
-                {{errorMsg}}
             </div>
-        </div>        
-    </div>
+        </div>  
+</div>
