--- a/public/views/clicky.html
+++ b/public/views/clicky.html
@@ -6,90 +6,41 @@
                     <h3 class="panel-title">Advanced Search</h3>
                 </div>
                 <div class="panel-body vc-advsearch-pnl-body">
-                    <div class="form-group">
-                        <label class="control-label" for="input_company">Company:</label>
-                        <input type="text" class="form-control form-control-sm"  ng-model="input_company" placeholder="">
+                    <div class="form-group" ng-repeat="sfield in searchFields">
+                        <label class="control-label" for="input_{{sfield.key}}">{{sfield.name}}:</label>
+                        <input type="text" class="form-control form-control-sm" id="input_{{sfield.key}}" placeholder="">
                     </div>
-                    <div class="form-group">
-                        <label class="control-label " for="input_domain">Domain:</label>
+                    <!-- <div class="form-group">
+                        <label class="control-label " for="input_domain">IP Address:</label>
 
-                        <input type="text" class="form-control form-control-sm" ng-model="input_domain" placeholder="">
-
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label " for="input_address">Address:</label>
-
-                        <input type="text" class="form-control form-control-sm" ng-model="input_address" placeholder="">
+                        <input type="text" class="form-control form-control-sm" ng-model="input_ip_address" placeholder="">
 
                     </div>
                     <div class="form-group">
-                        <label class="control-label " for="input_city">City:</label>
+                        <label class="control-label " for="input_address">Landing Page:</label>
 
-                        <input type="text" class="form-control form-control-sm" ng-model="input_city" placeholder="">
-
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label " for="input_state">State:</label>
-
-                        <input type="text" class="form-control form-control-sm" ng-model="input_state" placeholder="">
+                        <input type="text" class="form-control form-control-sm" ng-model="input_landing_page" placeholder="">
 
                     </div>
                     <div class="form-group">
-                        <label class="control-label " for="input_zipcode">Zipcode:</label>
+                        <label class="control-label " for="input_city">Geolocation:</label>
 
-                        <input type="text" class="form-control form-control-sm" ng-model="input_zipcode" placeholder="">
+                        <input type="text" class="form-control form-control-sm" ng-model="input_geolocation" placeholder="">
 
-                    </div>
+                    </div>                                       
                     <div class="form-group">
                         <label class="control-label " for="input_country">Country:</label>
 
-                        <input type="text" class="form-control form-control-sm" ng-model="input_country" placeholder="">
+                        <input type="text" class="form-control form-control-sm" ng-model="input_country_code" placeholder="">
 
                     </div>
                     <div class="form-group">
-                        <label class="control-label " for="input_industry">Industry:</label>
+                        <label class="control-label " for="input_state">Actions:</label>
 
-                        <input type="text" class="form-control form-control-sm" ng-model="input_industry" placeholder="">
-
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label " for="input_sic_code">SIC Code:</label>
-
-                        <input type="text" class="form-control form-control-sm" ng-model="input_sic_code" placeholder="">
+                        <input type="text" class="form-control form-control-sm" ng-model="input_actions" placeholder="">
 
                     </div>
-                    <div class="form-group">
-                        <label class="control-label " for="input_revenue">Revenue:</label>
-
-                        <select class="form-control form-control-sm" ng-model="input_revenue">
-                                    <option value="">None</option>                                        
-                                    <option value="500 to 1000">500 to 1000</option>
-                                    <option value="Above 1000">Above 1000</option>
-                                </select>
-
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label " for="input_employees">Employees:</label>
-
-                        <select class="form-control form-control-sm" ng-model="input_employees">
-                                    <option value="">None</option>                                        
-                                    <option value="500 to 1000">500 to 1000</option>
-                                    <option value="Above 1000">Above 1000</option>
-                                </select>
-
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label " for="input_software">Software:</label>
-
-                        <input type="text" class="form-control form-control-sm" ng-model="input_software" placeholder="">
-
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label " for="input_parent">Parent:</label>
-
-                        <input type="text" class="form-control form-control-sm" ng-model="input_parent" placeholder="">
-
-                    </div>
+                   -->
                     <div class="form-group adv_submit">
                         <button id="adv_submit" type="submit" class="btn btn-default btn-xs" ng-click="advancedSearch()">Submit</button>
                     </div>
@@ -98,6 +49,7 @@
         </div>
         <div class="company-crosstab-div">
             <div class="row">
+            <!--
                 <div class='col-sm-8'>
                     <div class="input-group">
                         <input ng-model="search" type="text" class="form-control" placeholder="Search for...">
@@ -105,15 +57,17 @@
                             <button title="Search" class="btn btn-default" type="button" ng-click="initSearch()"><span class="glyphicon glyphicon-search search-icon"></span></button>
                         </span>
                     </div>
-                </div>
-                <div class='col-sm-4'>                        
-                    <datetimepicker requireddate="date" getvisitors="getvisitorsbydate()"></datetimepicker>                        
-                </div>  
+                </div> 
+            -->                
            
                 <div class='col-sm-12'>
                     <div class="panel panel-primary clicky-panel">
-                        <div class="panel-heading">                         
-                                <h3 class="panel-title">Companies</h3>                                         
+                        <div class="panel-heading"> 
+                            <span class="panel-title"><strong>Visitors</strong></span>
+                            <span class='datetimepicker-container'>                        
+                                <datetimepicker requireddate="date" getvisitors="getvisitorsbydate()"></datetimepicker>                        
+                            </span>
+                                                                    
                         </div>
                         <div class="panel-body vc_clicky_list">
                             <table class="ih-table" id="company_tbl" companytbl colswidth="colsw" colfields="fields">
