--- a/public/css/main.css
+++ b/public/css/main.css
@@ -154,6 +154,12 @@ a, .field-label {
     word-wrap: break-word;    
   }
 
+.ih-th {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
 .ih-thead {
     background-color: #333;
     color: #FDFDFD;
@@ -168,11 +174,18 @@ a, .field-label {
     display: block;
     overflow: auto;
     width: 100%;
-    height: calc(100vh - 225px);    
+       
 }
 
 .ih-tbody tr:nth-child(even) {
     background-color:  #DDD;
+}
+
+.ih-tbody-company {
+    height: calc(100vh - 265px); 
+}
+.ih-tbody-clicky {
+    height: calc(100vh - 225px); 
 }
 
 .action-info {
@@ -234,4 +247,67 @@ a, .field-label {
 .search-icon-ip {
     font-size: 21px;
 }
+.cog {
+    float: right;
+    font-size: 18px;
+}
+.cog:hover {
+    cursor: pointer;
+}
+.col-selection-close {
+    font-size: 16px;    
+    float: right;
+    margin-right: -10px;
+    cursor: pointer;
+}
+.col-selection-submit{
+    text-align: center;
+}
+.col-selection-submit > button {
+    font-size: 12px;    
+}
+.col-selection {    
+    position: absolute;
+    padding: 5px 15px 5px 15px;
+    z-index: 999;
+    top: 75px;
+    right: 65px;   
+    color: #333; 
+}
 
+.shadow {
+  -moz-box-shadow:    5px 5px 5px #999999;
+  -webkit-box-shadow: 5px 5px 5px #999999;
+  box-shadow:         5px 5px 5px #999999;
+}
+
+/* Callout */
+.arrow_box {	
+	background: #f2f2f2;
+	border: 2px solid #b3b3b3;
+    border-radius : 5px;
+}
+.arrow_box:after, .arrow_box:before {
+	left: 100%;
+	top: 70px;
+	border: solid transparent;
+	content: " ";
+	height: 0;
+	width: 0;
+	position: absolute;
+	pointer-events: none;
+}
+
+.arrow_box:after {
+	border-color: rgba(242, 242, 242, 0);
+	border-left-color: #f2f2f2;
+	border-width: 10px;
+	margin-top: -10px;
+}
+.arrow_box:before {
+	border-color: rgba(179, 179, 179, 0);
+	border-left-color: #b3b3b3;
+	border-width: 13px;
+	margin-top: -13px;
+}
+/* Callout */
