--- a/public/css/main.css
+++ b/public/css/main.css
@@ -230,12 +230,16 @@ a, .field-label {
     font-size: 15px;
 }
 
-.visitor-info-div {
+.info-div {
     padding: 5px;
 }
 
-.visitors-info-label {    
+.info-label {    
     font-weight: bold;    
+}
+
+.info-data {
+    min-height : 20px;
 }
 
 .datetimepicker-container{
@@ -406,4 +410,35 @@ input[type=checkbox], input[type=radio] {
 
 .navbar-brand {
     font-size: 1.5em;
+}
+.modal-content {
+    font-size: 1.2em;
+}
+
+.modal-header {
+    padding : 5px 15px;
+}
+
+.info-editsave-btn {    
+    background: none;
+    border: 0;
+    display: none;
+    cursor: pointer;
+    opacity: 0.5;
+}
+
+
+.info-data:hover > .info-editsave-btn {
+    display:inline-block;
+}
+
+.info-data > input {
+    border : 0;
+    background: none;
+    padding-left: 5px;
+}
+
+.allow-edit > input {
+    border : 1px;
+    background: #f2f2f2;
 }
